# Humanoid_Robot_Interfaces_Server

./: .gitignore  CMakeLists.txt  README.md
config/: module_config.yaml  software.yaml
examples/: CMakeLists.txt  server_example.cpp  simple_test.cpp
idl/loc_msg/: CMakeLists.txt  package.xml
idl/loc_msg/msg/: ReqPoseMsg.msg  ResStartNav.msg  ResStatus.msg
idl/loc_msg/scripts/: test_loc.py  test_nav.py
include/: interfaces_server.h
include/modules/: control_module.h  decision_module.h  hardware_module.h  module_base.h  module_manager.h  navigation_module.h  perception_module.h
service/: CMakeLists.txt  main.cpp
source/: CMakeLists.txt  interfaces_server.cpp
source/modules/: CMakeLists.txt  control_module.cpp  module_base.cpp  module_manager.cpp  navigation_module.cpp  perception_module.cpp
